--- a/style.css
+++ b/style.css
@@ -1,333 +1,341 @@
 
 body {
-	background: #fff;
-	margin:0px;
+    background: #fff;
+    margin:0px;
 
 }
 
 /*Background in heading settings*/
 .head-background{
-	position: relative;
-	background-image: url(images/chalk_board.png);
-	height:95vh;
-	width:100%;
-	background-position: 50% 0%;
-	background-size: cover;
-	display: table;
-	margin:0;
+    position: relative;
+    background-image: url(images/chalk_board.png);
+    height:95vh;
+    width:100%;
+    background-position: 50% 0%;
+    background-size: cover;
+    display: table;
+    margin:0;
 }
 
 /*Aligning headings h1 and h3*/
 #heading{   
-	display: table-cell;
-	vertical-align: middle; /* wypośrodkowywanie treści w pionie */
+    display: table-cell;
+    vertical-align: middle; /* wypośrodkowywanie treści w pionie */
 }
 #heading h1{
-	font-size:5em;
-	font-family: raleway;
-	color:#fff;
-	display:block;
-	text-align: center;
-	margin: auto;
+    font-size:5em;
+    font-family: raleway;
+    color:#fff;
+    display:block;
+    text-align: center;
+    margin: auto;
 }
 #heading h3 {
-	font-size:2em;
-	font-family: raleway, sans-serif;
-	font-weight: 200;
-	color:#FFF;
-	text-align:center;
-	margin:auto;
+    font-size:2em;
+    font-family: raleway, sans-serif;
+    font-weight: 200;
+    color:#FFF;
+    text-align:center;
+    margin:auto;
 }
 
 /*Down slider from arrow to next slide,
 background shape, color and location of icon*/
 .slide-down{
-	position: absolute;
-	left: calc(50% - 30px);
-	top: calc(100% - 30px);
-	border-radius: 50%;
-	background: #fff;
+    position: absolute;
+    left: calc(50% - 30px);
+    top: calc(100% - 30px);
+    border-radius: 50%;
+    background: #fff;
 }
 .slide-icon{
-	position: relative;
-	background-image: url(images/arrow.svg);
-	background-size: cover;
-	width: 65px;
-	height: 65px;
+    position: relative;
+    background-image: url(images/arrow.svg);
+    background-size: cover;
+    width: 65px;
+    height: 65px;
 }
 .slide-icon:hover{
-	background-image: url(images/arrow_red.svg);
+    background-image: url(images/arrow_red.svg);
 }
 /*White separator under arrow*/
 .separation{
-	width:100%;
-	height:5vh;
-	background: #fff;
+    width:100%;
+    height:5vh;
+    background: #fff;
+
 }
 
 /*Container for second slide, paragraph about site*/
 #container
 {
-	width:100%;
-	height:100vh;
-	display: table;
+    width:100%;
+    height:100vh;
+    display: table;
     background: #fff;
+    margin-right: 1000px;
 }
 .about_site{
-	height:200px;
-	width: 100%;
-	display: table-cell;
-	vertical-align: middle; /* wypośrodkowywanie treści w pionie */
+
+    height:200px;
+    width: 100%;
+    display: table-cell;
+    vertical-align: middle; /* wypośrodkowywanie treści w pionie */
 }
 .about_site h3{
-	font-size:2em;
-	font-weight: 200;
-	font-family:raleway, sans-serif;
-	color:#2E2E2E;
-	text-align: center;
+    font-size:2em;
+    font-weight: 200;
+    font-family:raleway, sans-serif;
+    color:#2E2E2E;
+    text-align: center;
 }
 .about_site p{
-	font-size: 1.3em;
-	font-family: raleway, sans-serif;
-	color:#2E2E2E;
-	text-align: center;
+    font-size: 1.3em;
+    font-family: raleway, sans-serif;
+    color:#2E2E2E;
+    text-align: center;
 }
 
 /*Size of features element*/
 #features{
-	width:100%;
-	height:100vh;
-	display:table;
+    width:100%;
+    height:100vh;
+    display:table;
 }
 
 /*Appereance of h3*/
 #features h3{
-	color:#7BBF4B;
-	font-size:3em;
+    color:#2E2E2E;
+    font-size:3.5em;
     font-weight: 900;
-	font-weight: 600;
+    font-weight: bold;
+    text-align: center;
+    text-shadow: rgba(0, 0, 0, 0.6) 3px 3px 3px;
+
+    /*text stroke*/
+    -webkit-text-stroke: 2px #7BBF4B;
 }
 
 /*alignment all elements in features*/
 .alignment{
-	height:60vh;
-	width: auto;
-	margin: auto;
-	display:table-cell;
-	vertical-align: middle;
+    height:60vh;
+    width: auto;
+    margin: auto;
+    display:table-cell;
+    vertical-align: middle;
 }
 
 /*Size of Icons*/
 span{
-	font-size:4em;
+    font-size:4em;
 }
 
 /*Size of squares*/
 #services .service {
-	width: 35vh;
-	float:center;
-	min-height: 200px;
-	overflow: hidden;
-	position: relative;
-	display:inline-block;
+    width: 35vh;
+    float:center;
+    min-height: 200px;
+    overflow: hidden;
+    position: relative;
+    display:inline-block;
 }
 
 /*Appereance in mobile version*/
 @media screen and (max-width: 600px) {
-	#services .service {
-		width: 50%;
-	}
+    #services .service {
+        width: 50%;
+    }
 }
 @media screen and (max-width: 320px) {
-	#services .service {
-		width: 100%;
-	}
+    #services .service {
+        width: 100%;
+    }
 }
 
 /*Appereance before change for description*/
 #services .service .service-icon, #services .service .service-description {
-	position: absolute;
-	width: 100%;
-	height: 100%;
-	top: 0;
-	left: 0;
-	/*squares color*/
-	background: #2C5744;
-	padding: 50px 0;
-	/*text, icons color*/
-	color: #fff;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    /*squares color*/
+    background: #2C5744;
+    padding: 50px 0;
+    /*text, icons color*/
+    color: #fff;
 }
 
 /*Appereance after change for description*/
 #services .service .service-description {
-	left: 100%;
-	background: #7BBF4B;
-	color: white;
-	padding: 50px;
+    left: 100%;
+    background: #7BBF4B;
+    color: white;
+    padding: 50px;
 }
 
 /*Setting cursor for hand before change to description*/
 #services .service .service-description:hover { 
-	cursor: pointer; 
-    
+    cursor: pointer;
+
 }
 
 /*ICON FONT BEGIN*/
 /*Source for icon font, fonts appereance*/
 @font-face {
-	font-family: "myfont";
-	src:url("fonts/myfont.eot");
-	src:url("fonts/myfont.eot?#iefix") format("embedded-opentype"),
-		url("fonts/myfont.woff") format("woff"),
-		url("fonts/myfont.ttf") format("truetype"),
-		url("fonts/myfont.svg#myfont") format("svg");
-	font-weight: normal;
-	font-style: normal;
+    font-family: "myfont";
+    src:url("fonts/myfont.eot");
+    src:url("fonts/myfont.eot?#iefix") format("embedded-opentype"),
+        url("fonts/myfont.woff") format("woff"),
+        url("fonts/myfont.ttf") format("truetype"),
+        url("fonts/myfont.svg#myfont") format("svg");
+    font-weight: normal;
+    font-style: normal;
 
 }
 
 [data-icon]:before {
-	font-family: "myfont" !important;
-	content: attr(data-icon);
-	font-style: normal !important;
-	font-weight: normal !important;
-	font-variant: normal !important;
-	text-transform: none !important;
-	speak: none;
-	line-height: 1; /*space between lines in description*/
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
+    font-family: "myfont" !important;
+    content: attr(data-icon);
+    font-style: normal !important;
+    font-weight: normal !important;
+    font-variant: normal !important;
+    text-transform: none !important;
+    speak: none;
+    line-height: 1; /*space between lines in description*/
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 [class^="icon-"]:before,
 [class*=" icon-"]:before {
-	font-family: "myfont" !important;
-	font-style: normal !important;
-	font-weight: normal !important;
-	font-variant: normal !important;
-	text-transform: none !important;
-	speak: none;
-	line-height: 1; /*odstęp między tekstem a ikoną*/
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
+    font-family: "myfont" !important;
+    font-style: normal !important;
+    font-weight: normal !important;
+    font-variant: normal !important;
+    text-transform: none !important;
+    speak: none;
+    line-height: 1; /*odstęp między tekstem a ikoną*/
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 /*Delete unusable at the end*/
 .icon-scroll:before {
-	content: "a";
+    content: "a";
 }
 .icon-multiply:before {
-	content: "b";
+    content: "b";
 }
 .icon-menu:before {
-	content: "d";
+    content: "d";
 }
 .icon-author:before {
-	content: "c";
+    content: "c";
 }
 .icon-abacus:before {
-	content: "e";
+    content: "e";
 }
 .icon-author1:before {
-	content: "f";
+    content: "f";
 }
 .icon-what:before {
-	content: "g";
+    content: "g";
 }
 .icon-basic:before {
-	content: "h";
+    content: "h";
 }
 .icon-theory:before {
-	content: "i";
+    content: "i";
 }
 .icon-calculator:before {
-	content: "j";
+    content: "j";
 }
 .icon-checkbox:before {
-	content: "k";
+    content: "k";
 }
 .icon-checkbox2:before {
-	content: "l";
+    content: "l";
 }
 .icon-checkbox1:before {
-	content: "m";
+    content: "m";
 }
 .icon-equal:before {
-	content: "n";
+    content: "n";
 }
 .icon-multiply-1:before {
-	content: "o";
+    content: "o";
 }
 .icon-logo:before {
-	content: "p";
+    content: "p";
 }
 .icon-logo-hover:before {
-	content: "q";
+    content: "q";
 }
 .icon-growing:before {
-	content: "r";
+    content: "r";
 }
 .icon-divide:before {
-	content: "s";
+    content: "s";
 }
 .icon-menu1:before {
-	content: "t";
+    content: "t";
 }
 @import url(reset.css);
 /*ICON FONT END*/
 
 /*box sizing layout for features*/
 * { 
-	-moz-box-sizing: border-box; 
-	-webkit-box-sizing: border-box; 
-	box-sizing: border-box; 
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
 }
 .cf:before, .cf:after { 
-	content: " ";
-	display: table;
+    content: " ";
+    display: table;
 }
 .cf:after { 
-	clear: both; 
+    clear: both;
 }
 .cf 
 { 
-	*zoom: 1; 
+    *zoom: 1;
 }
 
 /*Appereance for all elements in features*/
 #features{
-font-family: 'Exo 2', sans-serif; 
-	text-align: center;
-	color: #999;
-	background: #333;
-	-webkit-font-smoothing: antialiased;
+    font-family: 'Exo 2', sans-serif;
+    text-align: center;
+    color: #999;
+    background: #333;
+    -webkit-font-smoothing: antialiased;
 }
 
 /*max-width, setting view for other resolutions*/
 #services {
-	max-width: 850px;
-	margin: 0 auto;
+    max-width: 850px;
+    margin: 0 auto;
 }
 
 /*setting cursor for hand and color of description and icon, after change to description*/
 #services .service .service-icon:hover {
-	cursor: pointer;
-	color: #7BBF4B;
-    
+    cursor: pointer;
+    color: #7BBF4B;
+
 }
 
 /*animation after click or hover icon element, time of changing color of icon and text*/
 #services .service .service-icon span {
-	display: block;
-	-webkit-transition: all 0.1s linear;
-	-moz-transition: all 0.1s linear;
-	transition: all 0.1s linear;
-    
+    display: block;
+    -webkit-transition: all 0.1s linear;
+    -moz-transition: all 0.1s linear;
+    transition: all 0.1s linear;
+
 }
 
 /*increase distance from bottom when hovered*/
 #services .service .service-icon:hover span {
-	position: relative;
-	bottom: 5px;
+    position: relative;
+    bottom: 5px;
 }
 
 
