--- a/style.css
+++ b/style.css
@@ -1,12 +1,52 @@
 
+@font-face {
+    font-family: "Sketchy";
+    src:url("fonts/Sketchy.ttf");
+    font-weight: normal;
+    font-style: normal;
+}
+@font-face {
+    font-family:"raleway-bold";
+    src:url("fonts/Raleway-Bold.ttf");
+    font-weight: normal;
+    font-style: normal;
+}
+@font-face {
+    font-family:"raleway-regular";
+    src:url("fonts/Raleway-Regular.ttf");
+    font-weight: normal;
+    font-style: normal;
+}
+@font-face {
+    font-family:"raleway-thin";
+    src:url("fonts/Raleway-Thin.ttf");
+    font-weight: normal;
+    font-style: normal;
+}
+@font-face {
+    font-family:"uni_sans_heavy";
+    src:url("fonts/uni_sans_heavy.otf");
+    font-weight: normal;
+    font-style: normal;
+}
+@font-face {
+    font-family:"uni_sans_thin";
+    src:url("fonts/uni_sans_thin.otf");
+    font-weight: normal;
+    font-style: normal;
+}
+
+/* XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX*/
+
 body {
     background: #fff;
     margin:0px;
 
 }
 
+
 /*Background in heading settings*/
-.head-background{
+#head-background{
     position: relative;
     background-image: url(images/chalk_board.png);
     height:95vh;
@@ -17,23 +57,194 @@ body {
     margin:0;
 }
 
+
+.menu {
+    position: fixed;
+    right: -290px;
+    width: 350px;
+    height: 100%;
+    top: 0;
+    z-index: 10;
+    text-align: left;
+}
+
+
+.menu.menu-open {
+    right: 0px;
+}
+
+.menu-wrap {
+    position: absolute;
+    top: 0;
+    left: 60px;
+    background: #2E2E2E;
+    width: 300px;
+    height: 100%;
+}
+
+.menu h1.logo a {
+    font-family:  "font_awesome" ;
+    font-size: 1.8em;
+    font-weight: 900;
+    letter-spacing: 0.15em;
+    line-height: 40px;
+    text-transform: uppercase;
+    color: #ffffff;
+    margin-top: 20px;
+}
+
+.menu h1.logo a:hover {
+    color: #D91A2A;
+}
+
+.menu img.logo {
+    margin: 20px 0;
+    max-width: 160px;
+}
+
+.menu a {
+     font-family: "uni_sans_thin" ;
+    margin-left: 20px;
+    color: #fff;
+    display: block;
+    font-size: 1em;
+    font-weight: 900;
+    line-height: 40px;
+    letter-spacing: 0.1em;
+    text-transform: uppercase;
+    text-decoration: none;
+}
+
+.menu a:hover {
+    color: #0583F2;
+}
+
+.menu a:active {
+    color: #7BBF4B;
+}
+
+.menu a > i {
+    float: left;
+    display: inline-block;
+    vertical-align: middle;
+    text-align: left;
+    width: 25px;
+    font-size: 14px;
+    line-height: 40px;
+    margin: 25px 2px;
+}
+
+.menu-close {
+    cursor: pointer;
+    display: block;
+    position: absolute;
+    font-size: 20px;
+    color: #808080;
+    width: 250px;
+    height: 40px;
+    line-height: 40px;
+    top: 28px;
+    right: -200px;
+    -webkit-transition: all .1s ease-in-out;
+    -moz-transition: all .1s ease-in-out;
+    -ms-transition: all .1s ease-in-out;
+    -o-transition: all .1s ease-in-out;
+    transition: all .1s ease-in-out;
+}
+
+.menu-close:hover {
+    color: #0583F2;
+    -webkit-transition: all .1s ease-in-out;
+    -moz-transition: all .1s ease-in-out;
+    -ms-transition: all .1s ease-in-out;
+    -o-transition: all .1s ease-in-out;
+    transition: all .1s ease-in-out;
+}
+.menu-close:active {
+    color: #D91A2A;
+    -webkit-transition: all .1s ease-in-out;
+    -moz-transition: all .1s ease-in-out;
+    -ms-transition: all .1s ease-in-out;
+    -o-transition: all .1s ease-in-out;
+    transition: all .1s ease-in-out;
+}
+
+
+/* Push the body after clicking the menu button */
+.body-push {
+    overflow-x: hidden;
+    position: relative;
+    left: 0;
+}
+
+.body-push-toright {
+    left: 300px;
+}
+
+.body-push-toleft {
+    left: -300px;
+}
+
+.menu,
+.body-push {
+    -webkit-transition: all .3s ease;
+    -moz-transition: all .3s ease;
+    -ms-transition: all .3s ease;
+    -o-transition: all .3s ease;
+    transition: all .3s ease;
+}
+
+#menuToggle {
+    position: absolute;
+    top: 20px;
+    left: 0;
+    z-index: 11;
+    display: block;
+    text-align: center;
+    font-size: 14px;
+    color: #ffffff;
+    width: 40px;
+    height: 40px;
+    line-height: 40px;
+    cursor: pointer;
+    background: rgba(0,0,0,0.25);
+    -webkit-transition: all .1s ease-in-out;
+    -moz-transition: all .1s ease-in-out;
+    -ms-transition: all .1s ease-in-out;
+    -o-transition: all .1s ease-in-out;
+    transition: all .1s ease-in-out;
+}
+
+#menuToggle:hover {
+    color: #ffffff;
+    background: rgba(0,255,0,0.2);
+    -webkit-transition: all .1s ease-in-out;
+    -moz-transition: all .1s ease-in-out;
+    -ms-transition: all .1s ease-in-out;
+    -o-transition: all .1s ease-in-out;
+    transition: all .1s ease-in-out;
+}
+
+
 /*Aligning headings h1 and h3*/
-#heading{   
+.heading{
     display: table-cell;
     vertical-align: middle; /* wypośrodkowywanie treści w pionie */
 }
-#heading h1{
+
+.heading h1{
     font-size:5em;
-    font-family: raleway;
+    font-family:  "raleway-bold", arial;
     color:#fff;
     display:block;
     text-align: center;
     margin: auto;
 }
-#heading h3 {
-    font-size:2em;
-    font-family: raleway, sans-serif;
-    font-weight: 200;
+
+.heading h3 {
+    font-size:1.8em;
+    font-family: "raleway-regular", arial;
+    font-weight: 300;
     color:#FFF;
     text-align:center;
     margin:auto;
@@ -53,6 +264,7 @@ background shape, color and location of icon*/
 .slide-down:hover{
     background: #7BBF4B;
     cursor: pointer;
+
 }
 .icon-scroll{
     position: relative;
@@ -63,7 +275,7 @@ background shape, color and location of icon*/
     left:12.5%;
     top:15%;
     color:#2C5744;
-    font-family: raleway, sans-serif;
+    font-family: "raleway-regular", arial;
     text-decoration: none;
 }
 /*White separator under arrow*/
@@ -85,7 +297,7 @@ background shape, color and location of icon*/
 }
 .about_site h3{
     font-size:2em;
-    font-family:raleway, sans-serif;
+    font-family: "raleway-bold", sans-serif;
     color:#2E2E2E;
     text-align: center;
     margin-right: 100px;
@@ -93,7 +305,7 @@ background shape, color and location of icon*/
 }
 .about_site p{
     font-size: 1.3em;
-    font-family: raleway, sans-serif;
+    font-family: "raleway-regular", arial;
     color:#2E2E2E;
     text-align: center;
     margin-right: 100px;
@@ -144,39 +356,63 @@ span{
 /*ELEMENT IN FEATURES drawing board*/
 
 
-.board{
-    width: 28vh;
-    float:center;
-    height: 28vh;
-    position: relative;
-    display:inline-block;
-    z-index:1;
-}
-#chalkboard{
+.empty-field{
     width: 28vh;
     height: 28vh;
     background: #2C5744;
-    width: 100%;
-    height: 100%;
-    /*position of drawing with chalk*/
-	position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 2;
-    cursor: none;
+    display:inline-block;
 }
+.contents{
+    width: 28vh;
+    height: 28vh;
+    z-index: 0;
+    display:table;
+}
+
 .chalk{
-	width:40px;
-	height:50px;
+    width:40px;
+    height:50px;
     background-image:url(images/chalk.png);
-	position:absolute;
-	padding:0;
-	margin:0;
-	bottom:0px;
-	left:0px;
-	cursor:none;
-	z-index:3;
-	}
+    position:absolute;
+    top: 20vh;
+    left:20vh;
+    z-index: 5;
+}
+
+.contents p{
+    position: relative;
+    font-family: "sketchy";
+    font-size:1.5em;
+    color:white;
+}
+
+strong{
+    font-size:1.2em;
+    font-family: "raleway-bold";
+}
+.contents ul{
+    list-style-image: url("images/checkmark.svg");
+    position: relative;
+    font-family: "sketchy";
+    font-size:1em;
+    color:white;
+    text-align: left;
+    line-height: 1.3em;
+    display:table-cell;
+    vertical-align: middle;
+    right:2vh;
+}
+
+.contents span{
+    font-family: "sketchy";
+    color:white;
+    font-size:2em;
+    position: relative;
+    top:1vh;
+    left:24vh;
+    cursor:pointer;
+}
+
 
 /*Appereance in mobile version*/
 @media screen and (max-width: 600px) {
@@ -219,108 +455,7 @@ span{
 
 }
 
-/*ICON FONT BEGIN*/
-/*Source for icon font, fonts appereance*/
-@font-face {
-    font-family: "myfont";
-    src:url("fonts/myfont.eot");
-    src:url("fonts/myfont.eot?#iefix") format("embedded-opentype"),
-        url("fonts/myfont.woff") format("woff"),
-        url("fonts/myfont.ttf") format("truetype"),
-        url("fonts/myfont.svg#myfont") format("svg");
-    font-weight: normal;
-    font-style: normal;
 
-}
-
-[data-icon]:before {
-    font-family: "myfont" !important;
-    content: attr(data-icon);
-    font-style: normal !important;
-    font-weight: normal !important;
-    font-variant: normal !important;
-    text-transform: none !important;
-    speak: none;
-    line-height: 1; /*space between lines in description*/
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-}
-
-[class^="icon-"]:before,
-[class*=" icon-"]:before {
-    font-family: "myfont" !important;
-    font-style: normal !important;
-    font-weight: normal !important;
-    font-variant: normal !important;
-    text-transform: none !important;
-    speak: none;
-    line-height: 1; /*odstęp między tekstem a ikoną*/
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-}
-/*Delete unusable at the end*/
-.icon-scroll:before {
-    content: "a";
-}
-.icon-multiply:before {
-    content: "b";
-}
-.icon-menu:before {
-    content: "d";
-}
-.icon-author:before {
-    content: "c";
-}
-.icon-abacus:before {
-    content: "e";
-}
-.icon-author1:before {
-    content: "f";
-}
-.icon-what:before {
-    content: "g";
-}
-.icon-basic:before {
-    content: "h";
-}
-.icon-theory:before {
-    content: "i";
-}
-.icon-calculator:before {
-    content: "j";
-}
-.icon-checkbox:before {
-    content: "k";
-}
-.icon-checkbox2:before {
-    content: "l";
-}
-.icon-checkbox1:before {
-    content: "m";
-}
-.icon-equal:before {
-    content: "n";
-}
-.icon-multiply-1:before {
-    content: "o";
-}
-.icon-logo:before {
-    content: "p";
-}
-.icon-logo-hover:before {
-    content: "q";
-}
-.icon-growing:before {
-    content: "r";
-}
-.icon-divide:before {
-    content: "s";
-}
-.icon-menu1:before {
-    content: "t";
-}
-@import url(reset.css);
-/*ICON FONT END*/
 
 /*box sizing layout for features*/
 * { 
@@ -376,6 +511,8 @@ span{
     position: relative;
     bottom: 5px;
 }
+
+
 
 
 
