Working hyperlinks, added more sections.

--- a/assets/app-icons/styles.css
+++ b/assets/app-icons/styles.css
@@ -74,3 +74,33 @@
     
     
 }
+
+#definition {
+        min-height: 100vh;
+
+}
+
+
+
+.col-md-4 {
+    display: table;
+}
+
+.separation_line div{
+    display: block;
+}
+.sep_line {
+    height: 20px;
+background: url(/images/separation_line.svg) 0 0/650px 20px repeat-x #2e2e2e;
+}
+
+#equations_inequalities {
+    min-height: 200vh;
+}
+
+.math-image {
+   padding:5px;
+    padding-top: 8px;
+}
+
+
