--- a/css/styles.css
+++ b/css/styles.css
@@ -372,6 +372,9 @@ h5 {
 .deep-dark-bg {
     background: #161616 !important;
 }
+.dark-bg {
+    background: #1F1F1F !important;
+}
 
 
 /*---------------------------------------
@@ -379,7 +382,7 @@ h5 {
 -----------------------------------------*/
 
 .section-header {
-    padding-bottom:78px;
+    padding-bottom:28px;
 }
 
 .section-header h2 {
@@ -442,9 +445,6 @@ h5 {
 
 header {
     background-size:  100vh 100vh;
-    background: url(../images/background.jpg) no-repeat center top fixed;
-    -webkit-background-size: cover;
-            background-size: cover;
 }
 
 header .color-overlay {
@@ -545,6 +545,7 @@ header .intro-section .buttons {
     text-align: right;
     margin-top: 26px;
     margin-bottom: 80px;
+    padding-left: 60px;
 }
 
 .features .features-left .icon-container {
@@ -556,6 +557,7 @@ header .intro-section .buttons {
     text-align: left;
     margin-top: 26px;
     margin-bottom: 80px;
+    padding-right: 60px;
 }
 
 .features .features-right .icon-container {
@@ -587,13 +589,15 @@ header .intro-section .buttons {
             background-clip: padding-box;
 }
 
-.features .phone-image {
+.features .graphics {
+     display: table-cell;
+    vertical-align: middle;
     max-width: 250px;
     margin: auto;
     margin-bottom: 80px;
 }
 
-.features .phone-image img {
+.features .graphics img {
     width: 100%;
 }
 
@@ -620,13 +624,14 @@ header .intro-section .buttons {
     max-height: 905px;
 }
 
-.app-brief .phone-image img {
+.app-brief .graphics img {
     width: 100%;
 }
 
 .app-brief .left-align {
     text-align: left;
     margin-bottom: 50px;
+    padding-right: 60px;
 }
 
 .app-brief .left-align p {
